--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.28.3",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.7.2",
+    "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.5",
