--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-pdf": "^6.0.0-beta.6",
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.5",
     "web-vitals": "^2.1.4"
