--- a/package.json
+++ b/package.json
@@ -3,22 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.28.3",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.7.2",
-    "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-pdf": "^6.0.0-beta.6",
+    "react-pdf-table": "^1.0.0-alfa.3",
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.5",
     "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "@react-pdf/renderer": {
+      "react": "^18.2.0"
+    }
   },
   "scripts": {
     "start": "react-scripts start",
