--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "waterbilling",
   "version": "0.1.0",
+  "homepage": "https://gitname.github.io/react-gh-pages",
   "private": true,
   "dependencies": {
     "@react-pdf/renderer": "^3.1.9",
@@ -31,6 +32,8 @@
     }
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
