--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "waterbilling",
   "version": "0.1.0",
-  "homepage": "https://gitname.github.io/react-gh-pages",
+  "homepage": "https://github.com/Herald-Engineers/test.git",
   "private": true,
   "dependencies": {
     "@react-pdf/renderer": "^3.1.9",
